--- a/handsOn_ex7.1.qmd
+++ b/handsOn_ex7.1.qmd
@@ -24,6 +24,12 @@ format:
 
 This study focus on plotting choropleth map.
 
+::: {.callout-tip collapse="true" appearance="simple" icon="false"}
+## [**NOTE**]{style="color:#3a9c88"}
+
+The majority of content for this page is with references to [lecture notes](https://isss608-ay2022-23jan.netlify.app/hands-on_ex/hands-on_ex08/hands-on_ex08-networkvis#overview) from Dr. Kam Tin Seong.
+:::
+
 # **2. R PACKAGE REQUIRED**
 
 ## **2.1 Load R Packages**
