--- a/pnote/test7.qmd
+++ b/pnote/test7.qmd
@@ -27,7 +27,7 @@ The following are the packages required for this exercise :
 ## **1.1 Load R Packages**
 
 ```{r}
-pacman::p_load(readxl, ggHoriPlot, ggthemes, ggpubr, ggiraph, lubridate, tidyverse, data.table, plotly, viridis, hrbrthemes, CGPfunctions, ggrepel)
+pacman::p_load(readxl, ggHoriPlot, ggthemes, ggpubr, ggiraph, lubridate, tidyverse, data.table, plotly, viridis, hrbrthemes, CGPfunctions, ggrepel, corrplot, corrr)
 ```
 
 # **2. DATA PROCESSING & PREPARATION**
@@ -64,7 +64,10 @@ Each household received a different set of campaigns.
 
 ### 2.1.3 causal_data
 
+The file is too large to push over to Github. So, I have to split the datasets to keep each dataset less than 100 MB.
+
 ```{r}
+#| output: false
 #| eval: false
 causal_1 <- read_csv("data2/causal_data.csv") %>%
   select(-STORE_ID) %>%
@@ -82,6 +85,7 @@ write_rds(causal_2,
 ```
 
 ```{r}
+#| output: false
 #| eval: false
 causal_3 <- read_csv("data2/causal_data.csv") %>%
   select(-STORE_ID) %>%
@@ -92,6 +96,7 @@ write_rds(causal_3,
 ```
 
 ```{r}
+#| output: false
 #| eval: false
 causal_4 <- read_csv("data2/causal_data.csv") %>%
   select(-STORE_ID) %>%
@@ -102,6 +107,7 @@ write_rds(causal_4,
 ```
 
 ```{r}
+#| output: false
 #| eval: false
 causal_5 <- read_csv("data2/causal_data.csv") %>%
   select(-STORE_ID) %>%
@@ -112,6 +118,7 @@ write_rds(causal_5,
 ```
 
 ```{r}
+#| output: false
 #| eval: false
 causal_6 <- read_csv("data2/causal_data.csv") %>%
   select(-STORE_ID) %>%
@@ -122,6 +129,7 @@ write_rds(causal_6,
 ```
 
 ```{r}
+#| output: false
 #| eval: false
 causal_7 <- read_csv("data2/causal_data.csv") %>%
   select(-STORE_ID) %>%
@@ -132,6 +140,7 @@ write_rds(causal_7,
 ```
 
 ```{r}
+#| output: false
 #| eval: false
 causal_8 <- read_csv("data2/causal_data.csv") %>%
   select(-STORE_ID) %>%
@@ -142,6 +151,7 @@ write_rds(causal_8,
 ```
 
 ```{r}
+#| output: false
 #| eval: false
 causal_9 <- read_csv("data2/causal_data.csv") %>%
   select(-STORE_ID) %>%
@@ -152,6 +162,7 @@ write_rds(causal_9,
 ```
 
 ```{r}
+#| output: false
 #| eval: false
 causal_10 <- read_csv("data2/causal_data.csv") %>%
   select(-STORE_ID) %>%
@@ -162,6 +173,7 @@ write_rds(causal_10,
 ```
 
 ```{r}
+#| output: false
 #| eval: false
 causal_11 <- read_csv("data2/causal_data.csv") %>%
   select(-STORE_ID) %>%
@@ -172,6 +184,7 @@ write_rds(causal_11,
 ```
 
 ```{r}
+#| output: false
 #| eval: false
 causal_12 <- read_csv("data2/causal_data.csv") %>%
   select(-STORE_ID) %>%
@@ -182,6 +195,7 @@ write_rds(causal_12,
 ```
 
 ```{r}
+#| output: false
 #| eval: false
 causal_13 <- read_csv("data2/causal_data.csv") %>%
   select(-STORE_ID) %>%
@@ -246,9 +260,27 @@ This table identifies the coupons that each household redeemed.
 ### 2.1.6 hh_demographic
 
 ```{r}
-hh_demographic <- read_csv("data2/hh_demographic.csv")
+demographic <- read_csv("data2/hh_demographic.csv")
 
-glimpse(hh_demographic, 70)
+glimpse(demographic, 70)
+```
+
+```{r}
+questionr::freq(duplicated(demographic$household_key))
+```
+
+Remarks :
+
+-   No duplication in household_key.
+
+-   Only 801 households demographic data available.
+
+```{r}
+unique(demographic$AGE_DESC)
+```
+
+```{r}
+unique(demographic$MARITAL_STATUS_CODE)
 ```
 
 ### 2.1.7 product
@@ -268,6 +300,7 @@ This table contains information on each product sold such as type of product, na
 ### 2.1.8 transaction_data
 
 ```{r}
+#| output: false
 #| eval: false
 transaction_1 <- read_csv("data2/transaction_data.csv") %>%
   select(-STORE_ID) %>%
@@ -278,6 +311,7 @@ write_rds(transaction_1,
 ```
 
 ```{r}
+#| output: false
 #| eval: false
 transaction_2 <- read_csv("data2/transaction_data.csv") %>%
   select(-STORE_ID) %>%
@@ -288,6 +322,7 @@ write_rds(transaction_2,
 ```
 
 ```{r}
+#| output: false
 #| eval: false
 transaction_3 <- read_csv("data2/transaction_data.csv") %>%
   select(-STORE_ID) %>%
@@ -303,29 +338,55 @@ transaction_2 <- read_rds("data2/transaction_2.rds")
 transaction_3 <- read_rds("data2/transaction_3.rds")
 ```
 
-## 2.2 Explore Data
+# 3. DATA PREP
 
-### 2.2.1 Identify households
-
-```{r}
-length(unique(hh_demographic$household_key))
-ls(hh_demographic)
-```
+## 3.1 Group transaction data by household_key
 
 ```{r}
-sum(length(unique(transaction_1$household_key)) + length(unique(transaction_2$household_key)) + length(unique(transaction_3$household_key)))
-max(transaction_1$DAY)
-max(transaction_2$DAY)
-max(transaction_3$DAY)
+trans_1 <- transaction_1 %>%
+  group_by(household_key) %>%
+  summarise(totalSales = sum(SALES_VALUE), 
+            totalDisc = sum(RETAIL_DISC)) %>%
+  mutate(sales = totalSales + totalDisc)
+
+trans_2 <- transaction_2 %>%
+  group_by(household_key) %>%
+  summarise(totalSales = sum(SALES_VALUE), 
+            totalDisc = sum(RETAIL_DISC)) %>%
+  mutate(sales = totalSales + totalDisc)
+
+trans_3 <- transaction_3 %>%
+  group_by(household_key) %>%
+  summarise(totalSales = sum(SALES_VALUE), 
+            totalDisc = sum(RETAIL_DISC)) %>%
+  mutate(sales = totalSales + totalDisc)
+
+trans <- merge(trans_1, trans_2, all = TRUE)
+trans1 <- merge(trans, trans_3, all = TRUE)
 ```
 
 Remarks :
 
 Only 801 households demographic data available.
 
-7,347 unique households made transaction throughout 711 business days.
+```{r}
+trans1.1 <- trans1 %>%
+  group_by(household_key) %>%
+  summarise(totalSales1 = sum(totalSales), 
+            totalDisc1 = sum(totalDisc)) %>%
+  mutate(sales1 = totalSales1 + totalDisc1)
+```
 
-### 2.2.2 Campaign
+## 3.2 Merge Tables
+
+### 3.2.1 demographic & trans1.1
+
+```{r}
+demogTrans <- demographic %>%
+  full_join(trans1.1)
+```
+
+### 3.2.2 campaign_table & campaign_desc
 
 ```{r}
 campaigns <- campaign_table %>%
@@ -341,6 +402,7 @@ campaigns_1 <- campaigns %>%
 ```
 
 ```{r}
+#| output: false
 #| eval: false
 campaigns_hh <- campaigns_1 %>%
   plyr::join_all(list(transaction_1, transaction_2, transaction_3), 
@@ -348,22 +410,35 @@ campaigns_hh <- campaigns_1 %>%
                  type = "left")
 ```
 
+# 4. CORRELATION ANALYSIS
+
+## 4.1 Set household_key as the row id
+
 ```{r}
-length(unique(product$PRODUCT_ID))
+cluster_vars <- column_to_rownames(demogTrans,
+                                   var = 'household_key')
 ```
 
 ```{r}
-unique(campaign_table$DESCRIPTION)
+#| eval: false
+#| output: false
+cluster_vars %>%
+  select(sales, AGE_DESC, MARITAL_STATUS_CODE, HOUSEHOLD_SIZE_DESC) %>%
+  correlate()
+```
+
+Build Regression Model
+
+```{r}
+model_test <- lm(sales1 ~ AGE_DESC + HOMEOWNER_DESC + HOUSEHOLD_SIZE_DESC,
+                 data = cluster_vars)
+
+summary(model_test)
 ```
 
 ```{r}
-length(unique(transaction_1$BASKET_ID))
-```
-
-```{r}
-length(unique(coupon_redempt$household_key))
-```
-
-```{r}
-length(unique(campaign_table$household_key))
+#| eval: false
+#| output: false
+cluster_vars <- 
+wp_stdMM <- normalize(cluster_varsNF1)
 ```
