--- a/handsOn_ex9.qmd
+++ b/handsOn_ex9.qmd
@@ -27,7 +27,7 @@ This study explores the steps to create bullet chart and sparklines to form dash
 ::: {.callout-tip collapse="true" appearance="simple" icon="false"}
 ## [**NOTE**]{style="color:#3a9c88"}
 
-The majority of content for this page is with references to [lecture notes](https://isss608-ay2022-23jan.netlify.app/hands-on_ex/hands-on_ex08/hands-on_ex08-networkvis#overview) from Dr. Kam Tin Seong.
+The majority of content for this page is with references to [lecture notes](https://isss608-ay2022-23jan.netlify.app/hands-on_ex/hands-on_ex09/hands-on_ex09-information_dashboard_design) from Dr. Kam Tin Seong.
 :::
 
 # **2. R PACKAGE REQUIRED**
